@@ -70,6 +70,26 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1586" tool="jira">
+                    <description>
+		                Fixed error loading mapping whem migrating from 1.0.1 to 1.0.3.
+                    </description>
+                    <contributor>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon-world.de</email>
+                    </contributor>
+                    <submitter>
+                        <name>Ralf Joachim</name>
+                        <email>ralf.joachim@syscon-world.de</email>
+                    </submitter>
+                    <reporter>
+                        <name>M.-Leander Reimer</name>
+                        <email>l.reimer@adaptions.de</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061016</date>
+                </bug>
                 <bug id="1626" tool="jira">
                     <description>
 		                Added Code generation sample to HTML documentation            
